Starting adding new options onto menu

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -18,11 +18,27 @@
             <div class="list">
                 <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.home">
                     <i class="icon ion-home"></i>
-                    Home
+                    Inici
                 </a>
-                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.settings">
-                    <i class="icon ion-settings"></i>
-                    Settings
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.who">
+                    <i class="icon ion-ios-information"></i>
+                    Qui Som?
+                </a>
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.program">
+                    <i class="icon ion-ios-information"></i>
+                    Programació
+                </a>
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.botifler">
+                    <i class="icon ion-ios-information"></i>
+                    Botifler
+                </a>
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.location">
+                    <i class="icon ion-ios-information"></i>
+                    Els espais
+                </a>
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.inscrive">
+                    <i class="icon ion-ios-information"></i>
+                    Inscripcions
                 </a>
             </div>
         </ion-content>
