--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -11,11 +11,12 @@
     <ion-side-menu side="left" class="side-menu">
 
         <ion-header-bar align-title="center" class="bar-positive">
-            <h1 class="title">Side Menu</h1>
+            <h1 class="title">Menú</h1>
         </ion-header-bar>
 
         <ion-content class="has-header">
-            <div class="list">
+            <div class="list" ng-controller="MenuController">
+                el test es : {{test}}
                 <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.home">
                     <i class="icon ion-home"></i>
                     Inici
@@ -36,11 +37,12 @@
                     <i class="icon ion-ios-information"></i>
                     Els espais
                 </a>
-                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.inscrive">
+                <a menu-close class="item item-icon-left" ui-sref-active="active" ui-sref="app.inscribe">
                     <i class="icon ion-ios-information"></i>
                     Inscripcions
                 </a>
             </div>
         </ion-content>
     </ion-side-menu>
+    
 </ion-side-menus>
